--- a/vnc-fixed.html
+++ b/vnc-fixed.html
@@ -10,25 +10,45 @@
             background: #000;
             color: #fff;
             font-family: Arial, sans-serif;
+            overflow: hidden;
         }
         #vnc-canvas {
             width: 100vw;
             height: 100vh;
             display: block;
+            cursor: none;
         }
         #status {
             position: fixed;
             top: 10px;
             left: 10px;
-            background: rgba(0,0,0,0.7);
+            background: rgba(0,0,0,0.8);
             padding: 10px;
             border-radius: 5px;
             z-index: 1000;
+            font-size: 14px;
         }
+        #connection-info {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            background: rgba(0,0,0,0.8);
+            padding: 10px;
+            border-radius: 5px;
+            z-index: 1000;
+            font-size: 12px;
+        }
+        .status-connected { color: #00ff00; }
+        .status-connecting { color: #ffff00; }
+        .status-error { color: #ff0000; }
     </style>
 </head>
 <body>
-    <div id="status">Connecting to VNC...</div>
+    <div id="status" class="status-connecting">Connecting to VNC...</div>
+    <div id="connection-info">
+        <div>Target: <span id="target-info">10.51.101.83:5900</span></div>
+        <div>Proxy: <span id="proxy-info">10.51.101.49:6081</span></div>
+    </div>
     <canvas id="vnc-canvas"></canvas>
 
     <script src="core/rfb.js"></script>
@@ -39,35 +59,67 @@
         const port = urlParams.get('port') || '5900';
         const password = urlParams.get('password') || '123';
 
-        // Use the correct WebSocket URL (pointing to our websockify proxy)
+        // Update connection info
+        document.getElementById('target-info').textContent = `${host}:${port}`;
+        document.getElementById('proxy-info').textContent = '10.51.101.49:6081';
+
+        // IMPORTANT: Connect to websockify proxy, not directly to VNC server
         const wsUrl = `ws://10.51.101.49:6081/websockify`;
         
-        console.log('Connecting to:', wsUrl);
-        console.log('Target VNC:', `${host}:${port}`);
+        console.log('Connecting to websockify proxy:', wsUrl);
+        console.log('Target VNC server:', `${host}:${port}`);
+        console.log('Password:', password);
         
         // Create RFB connection
         const rfb = new RFB(document.getElementById('vnc-canvas'), wsUrl, {
-            credentials: { password: password }
+            credentials: { password: password },
+            wsProtocols: ['binary'],
+            repeaterID: '',
+            shared: true,
+            viewOnly: false,
+            showDotCursor: true,
+            background: '#000000',
+            qualityLevel: 6,
+            compressionLevel: 2,
+            ignoreTLSWarnings: true,
+            enableWebP: true,
+            enableJPEG: true,
+            enablePNG: true,
+            enableResize: true,
+            scaleViewport: true,
+            resizeSession: true,
+            clipViewport: false,
+            scaleQuality: 'fast',
+            mouse: true,
+            keyboard: true,
+            clipboard: true,
+            audio: false,
+            bell: false
         });
 
         // Connection events
         rfb.addEventListener('connect', function() {
+            console.log('VNC Connected successfully');
             document.getElementById('status').textContent = 'Connected to VNC';
-            document.getElementById('status').style.background = 'rgba(0,255,0,0.7)';
+            document.getElementById('status').className = 'status-connected';
         });
 
         rfb.addEventListener('disconnect', function(e) {
-            document.getElementById('status').textContent = 'Disconnected: ' + e.detail.clean ? 'Clean' : 'Error';
-            document.getElementById('status').style.background = 'rgba(255,0,0,0.7)';
+            console.log('VNC Disconnected:', e.detail);
+            document.getElementById('status').textContent = 'Disconnected: ' + (e.detail.clean ? 'Clean' : 'Error');
+            document.getElementById('status').className = 'status-error';
         });
 
         rfb.addEventListener('credentialsrequired', function() {
+            console.log('Credentials required');
             document.getElementById('status').textContent = 'Credentials required';
+            document.getElementById('status').className = 'status-error';
         });
 
         rfb.addEventListener('securityfailure', function(e) {
+            console.log('Security failure:', e.detail);
             document.getElementById('status').textContent = 'Security failure: ' + e.detail.reason;
-            document.getElementById('status').style.background = 'rgba(255,0,0,0.7)';
+            document.getElementById('status').className = 'status-error';
         });
 
         rfb.addEventListener('clipboard', function(e) {
@@ -79,6 +131,7 @@
         });
 
         rfb.addEventListener('desktopname', function(e) {
+            console.log('Desktop name:', e.detail.name);
             document.title = 'noVNC - ' + e.detail.name;
         });
 
@@ -90,7 +143,7 @@
         rfb.addEventListener('error', function(e) {
             console.error('VNC Error:', e);
             document.getElementById('status').textContent = 'Error: ' + e.detail.message;
-            document.getElementById('status').style.background = 'rgba(255,0,0,0.7)';
+            document.getElementById('status').className = 'status-error';
         });
 
         // Keyboard shortcuts
@@ -98,6 +151,12 @@
             if (e.ctrlKey && e.key === 'c') {
                 // Ctrl+C - Copy
                 rfb.clipboardPasteFrom = window.getSelection().toString();
+            }
+            if (e.ctrlKey && e.key === 'v') {
+                // Ctrl+V - Paste
+                navigator.clipboard.readText().then(text => {
+                    rfb.clipboardPasteFrom = text;
+                });
             }
         });
 
@@ -111,6 +170,28 @@
             rfb.scaleViewport = true;
             rfb.resizeSession = true;
         });
+
+        // Auto-reconnect on disconnect
+        rfb.addEventListener('disconnect', function(e) {
+            if (!e.detail.clean) {
+                console.log('Attempting to reconnect in 5 seconds...');
+                setTimeout(() => {
+                    console.log('Reconnecting...');
+                    rfb.connect(wsUrl, { credentials: { password: password } });
+                }, 5000);
+            }
+        });
+
+        // Connection timeout
+        setTimeout(() => {
+            if (rfb.state === 'connecting') {
+                console.log('Connection timeout, retrying...');
+                rfb.disconnect();
+                setTimeout(() => {
+                    rfb.connect(wsUrl, { credentials: { password: password } });
+                }, 1000);
+            }
+        }, 10000);
     </script>
 </body>
 </html>
