Add vnc-simple.html with correct script tags

--- a/vnc-fixed.html
+++ b/vnc-fixed.html
@@ -51,6 +51,10 @@
     </div>
     <canvas id="vnc-canvas"></canvas>
 
+    <script src="core/websock.js"></script>
+    <script src="core/base64.js"></script>
+    <script src="core/display.js"></script>
+    <script src="core/inflator.js"></script>
     <script src="core/rfb.js"></script>
     <script>
         // Get URL parameters
